[gd_scene load_steps=2 format=3 uid="uid://g5mdithl30jt"]

[ext_resource type="Script" path="res://Scripts/main_menu_script.gd" id="1_skv1f"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_skv1f")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="New Map" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New Map"

[node name="Load Map" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load Map"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/New Map" to="." method="_on_new_map_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Load Map" to="." method="_on_load_map_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
